--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  background: #F4F4F4;
+  width: 1440px;
+  height: 1028px;
+  margin: 0 auto;
+}
