--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -61,7 +61,7 @@ nav {
   width: 100%;
   height: 60px;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
   box-shadow: 0 0 10px 0 rgba(0,0,0,0.5);
 }
