--- a/src/app/friends/friends.component.css
+++ b/src/app/friends/friends.component.css
@@ -26,7 +26,7 @@
 .flex-search {
   display: flex;
   justify-content: space-between;
-  align-items: end;
+  align-items: flex-end;
 }
 
 .size-search-block-input {
